<resources>
    <string name="app_name">LevaMeContigo</string>
    <string name="levamecontigo">LevaMeContigo</string>
    <string name="e_mail_ou_password_est_o_incorretos">E-mail ou password estão incorretos</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="o_formato_do_e_mail_est_incorreto">O formato do e-mail está incorreto</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="as_passwords_n_o_coincidem">As passwords não coincidem</string>
    <string name="registar">Registar</string>
    <string name="adcicionar_boleia">Adcicionar Boleia</string>
    <string name="ver_boleias">Ver Boleias</string>
    <string name="ver_boleias_combinadas">Ver Boleias Combinadas</string>
    <string name="ver_todas_as_boleias">Ver Todas As Boleias</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="adicionar_boleia">Adicionar boleia</string>
</resources>