<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <TextView
        android:id="@+id/nomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levamecontigo"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/button_add_boleia"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:text="@string/adicionar_boleia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/button_ver_boleias"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:text="@string/ver_boleias_combinadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button_ver_boleias_all"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:text="@string/ver_todas_as_boleias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.45" />

    <Button
        android:id="@+id/button_edit_perfil"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:text="@string/editar_perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.6" />


</androidx.constraintlayout.widget.ConstraintLayout>