<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/nomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levamecontigo"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/erro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail_ou_password_est_o_incorretos"
        android:visibility="invisible"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/erro"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_email"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="107dp"
        android:layout_height="49dp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_pass"
        app:layout_constraintVertical_bias="0.076" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="107dp"
        android:layout_height="49dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/editText_pass"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/button_no_account"
        android:layout_width="250dp"
        android:layout_height="49dp"
        android:text="Entrar sem conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/button_login"
        app:layout_constraintTop_toBottomOf="@id/editText_pass"
        app:layout_constraintVertical_bias="0.355" />


</androidx.constraintlayout.widget.ConstraintLayout>