<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/nomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levamecontigo"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <TextView
        android:id="@+id/nomeApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Escolha uma password aleatória!"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.779" />

    <TextView
        android:id="@+id/erro_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o_formato_do_e_mail_est_incorreto"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeApp"
        app:layout_constraintVertical_bias="0.051" />

    <EditText
        android:id="@+id/edixtText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/teal_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/erro_mail"
        app:layout_constraintVertical_bias="0.298" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edixtText_email"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/editText_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_password"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/erro_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/as_passwords_n_o_coincidem"
        android:textColor="#FF0000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_confirm"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/button_add_boleia"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:text="@string/registar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/erro_pw"
        app:layout_constraintVertical_bias="0.405" />


</androidx.constraintlayout.widget.ConstraintLayout>